# connect4rust

./: .gitignore  Cargo.toml  datas.csv
src/: main.rs  tree.rs
