[package]
name = "connect4"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
bisetmap = "0.1.6"
eframe = "0.32.1"
egui = "0.32.1"
egui-twemoji = "0.7.1"
egui_extras = "0.32.1"
egui_graphs = "0.27.0"
epaint = "0.32.1"
petgraph = "0.8.2"
ptree = "0.5.2"
rand = "0.9.2"
rayon = "1.11.0"
serde = "1.0.219"
term-painter = "0.4.0"
